// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Button Color 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <button
    aria-label="button"
    className="buttons size-full color-primary"
  >
    <h3
      className="container color-button"
    >
      button
    </h3>
  </button>
  <button
    aria-label="button"
    className="buttons size-full color-secondary"
  >
    <h3
      className="container color-button"
    >
      button
    </h3>
  </button>
  <button
    aria-label="button"
    className="buttons size-full color-inverted"
  >
    <h3
      className="container color-primary"
    >
      button
    </h3>
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <button
    aria-label="button"
    className="buttons size-full color-primary"
  >
    <h3
      className="container color-button"
    >
      button
    </h3>
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Left Icon 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <button
    aria-label="button"
    className="buttons size-full color-primary"
  >
    <div
      className="container color-inverted size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13l4 4L19 7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
    <h3
      className="container color-button"
    >
      button
    </h3>
  </button>
  <button
    aria-label="button"
    className="buttons size-full color-secondary"
  >
    <div
      className="container color-inverted size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13l4 4L19 7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
    <h3
      className="container color-button"
    >
      button
    </h3>
  </button>
  <button
    aria-label="button"
    className="buttons size-full color-inverted"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13l4 4L19 7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
    <h3
      className="container color-primary"
    >
      button
    </h3>
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Only Icon 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <button
    aria-label="button"
    className="buttons size-mini color-inverted is-only-icon"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 19l-7-7 7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-mini color-inverted is-only-icon"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-mini color-inverted is-only-icon"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13l4 4L19 7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-mini color-inverted is-only-icon"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="80%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="80%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 11.5V14m0-2.5v-6a1.5 1.5 0 113 0m-3 6a1.5 1.5 0 00-3 0v2a7.5 7.5 0 0015 0v-5a1.5 1.5 0 00-3 0m-6-3V11m0-5.5v-1a1.5 1.5 0 013 0v1m0 0V11m0-5.5a1.5 1.5 0 013 0v3m0 0V11"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-mini color-inverted is-only-icon"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="1"
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-mini color-inverted is-only-icon"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-mini color-inverted is-only-icon"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-mini color-inverted is-only-icon"
  >
    <div
      className="container color-primary size-sm"
    >
      <svg
        height="100%"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M15.5 15.5l-10-10zM15.5 5.5l-10 10"
          />
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Right Icon 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <button
    aria-label="button"
    className="buttons size-full color-primary"
  >
    <h3
      className="container color-button"
    >
      button
    </h3>
    <div
      className="container color-inverted size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13l4 4L19 7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-full color-secondary"
  >
    <h3
      className="container color-button"
    >
      button
    </h3>
    <div
      className="container color-inverted size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13l4 4L19 7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
  <button
    aria-label="button"
    className="buttons size-full color-inverted"
  >
    <h3
      className="container color-primary"
    >
      button
    </h3>
    <div
      className="container color-primary size-sm"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 13l4 4L19 7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Size 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <button
    aria-label="button"
    className="buttons size-full color-primary"
  >
    <h3
      className="container color-button"
    >
      button
    </h3>
  </button>
  <button
    aria-label="button"
    className="buttons size-short color-primary"
  >
    <h3
      className="container color-button"
    >
      button
    </h3>
  </button>
  <button
    aria-label="button"
    className="buttons size-mini color-primary"
  >
    <h3
      className="container color-button"
    >
      button
    </h3>
  </button>
</div>
`;
